[profile.release]
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[workspace]
resolver = "2"

exclude = [
	"vendor/webpki",
	"vendor/ring",
	"polkadot/node/service",
	"substrate/client/db",
	"substrate/client/state-db",
]

members = [
	"node",
	"parachains-common",
	"crates/phala-serde-more",
	"crates/phala-types",
	"crates/phala-mq",
	"crates/phala-node-rpc-ext",
	"crates/phala-node-rpc-ext/types",
	"crates/phala-pallet-common",
	"crates/prpc",
	"crates/phala-trie-storage",
	"pallets/assets-registry",
	"pallets/phala",
	"pallets/phala/mq-runtime-api",
	"pallets/subbridge",
	"pallets/parachain-info",
	"pallets/phala-world",
	"runtime/phala",
	"runtime/khala",
	"runtime/rhala",
	"runtime/thala",
	"runtime/shell",
]

[patch."https://github.com/paritytech/polkadot"]
polkadot-service = { path = "polkadot/node/service" }

# Remove after we upgrade to polkadot-v0.9.36
[patch."https://github.com/paritytech/substrate"]
sc-state-db = { path = "substrate/client/state-db" }
sc-client-db = { path = "substrate/client/db" }

[patch.crates-io]
eth-encode-packed = { git = "https://github.com/tolak/eth-encode-packed-rs.git", branch = "0.1.0-etherabi-18" }
