[profile.release]
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[workspace]
resolver = "2"

exclude = [
	"vendor/webpki",
	"vendor/ring",
	"polkadot/node/service",
	"cumulus/client/consensus/common",
]

members = [
	"node",
	"parachains-common",
	"crates/phala-serde-more",
	"crates/phala-types",
	"crates/phala-mq",
	"crates/phala-node-rpc-ext",
	"crates/phala-node-rpc-ext/types",
	"crates/phala-pallet-common",
	"crates/prpc",
	"crates/phala-trie-storage",
	"pallets/assets-registry",
	"pallets/phala",
	"pallets/phala/mq-runtime-api",
	"pallets/subbridge",
	"pallets/parachain-info",
	"pallets/phala-world",
	"pallets/index",
	"runtime/phala",
	"runtime/khala",
	"runtime/rhala",
	"runtime/thala",
	"runtime/shell",
]

[patch."https://github.com/paritytech/polkadot"]
polkadot-service = { path = "polkadot/node/service" }

# TODO: Remove after upgrade to Polkdaot v0.9.42
[patch."https://github.com/paritytech/cumulus"]
cumulus-client-consensus-common = { path = "cumulus/client/consensus/common" }
