[package]
name = "khala-collator"
version = "0.0.1"
license = "Apache-2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/khala-parachain"
authors = ["Phala Network"]
description = "Khala parachain"
build = "build.rs"
edition = "2018"

[[bin]]
name = "khala-collator"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
derive_more = "0.15.0"
log = "0.4.13"
codec = { package = "parity-scale-codec", version = "2.1.0" }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.2.1"

# RPC related dependencies
jsonrpc-core = "15.1.0"

frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }

sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0", features = ["wasmtime"] }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0", features = ["wasmtime"] }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0", features = ["wasmtime"] }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0" }

cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus.git", branch = "master" }

polkadot-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
polkadot-service = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "master" }

runtime-common = { path = "../runtime/common" }
khala-runtime = { path = "../runtime/khala", package = "khala-parachain-runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0" }

[features]
default = []
runtime-benchmarks = [
	"polkadot-service/runtime-benchmarks",
	"khala-runtime/runtime-benchmarks",
]
