[package]
name = "parachains-common"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Logic which is common to all parachain runtimes"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# External dependencies
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["derive", "max-encoded-len"] }

# Substrate dependencies
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
node-primitives = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }

# Polkadot dependencies
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", rev = "63a4d8b420b06f410c446120d136fc3ec0c46b6a", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", rev = "63a4d8b420b06f410c446120d136fc3ec0c46b6a", default-features = false }

# Cumulus dependencies
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus", rev = "102a1d5428cd7acc4913d7d64cfba83fa35144dd", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-consensus-aura/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-collator-selection/std",
	"pallet-balances/std",
	"node-primitives/std",
	"polkadot-runtime-common/std",
	"polkadot-primitives/std",
]
